changed the text on the contact page

--- a/UC alert tool/Views/Home/Contact.cshtml
+++ b/UC alert tool/Views/Home/Contact.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>Contact </h2>
+<h3>Contact opnemen met UC Systems</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    kade 64<br />
+    hardixveld-giessendam, 3371 EP<br />
+    <abbr title="support nummer">Tel:</abbr>
+    088-6666 333
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support afdeling:</strong>   <a href="mailto:service@ucsystems.nl?SUBJECT=RE: Service UC Systems.nl">services@ucsystems.nl</a><br />
 </address>
