--- a/UC alert tool/Views/Home/Index.cshtml
+++ b/UC alert tool/Views/Home/Index.cshtml
@@ -1,31 +1,59 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-<div class="jumbotron">
+﻿<div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="col-md-4"> 
+        <div class="panel panel-primary">
+            <div class="panel-heading">Storing Office 365</div>
+            <div class="panel-body">
+                Helaas is zijn er de afgelopen dagen al enkelen problemen met office 365,
+                wij zullen de aankomend dagen proberen om de server om te zetten naar office 2016
+            </div>
+            <div class="panel-footer">
+                van 17 januari 2017 14.31<br />
+                Tot heden - Geen einddatum bekend
+            </div>
+        </div>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <div class="panel panel-primary">
+            <div class="panel-heading">Storing Office 365</div>
+            <div class="panel-body">
+                Helaas is zijn er de afgelopen dagen al enkelen problemen met office 365,
+                wij zullen de aankomend dagen proberen om de server om te zetten naar office 2016
+            </div>
+            <div class="panel-footer">
+                van 17 januari 2017 14.31<br />
+                Tot heden - Geen einddatum bekend
+            </div>
+        </div>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <div class="panel panel-primary">
+            <div class="panel-heading">Storing Office 365</div>
+            <div class="panel-body">
+                Helaas is zijn er de afgelopen dagen al enkelen problemen met office 365,
+                wij zullen de aankomend dagen proberen om de server om te zetten naar office 2016
+            </div>
+            <div class="panel-footer">
+                van 17 januari 2017 14.31<br />
+                Tot heden - Geen einddatum bekend
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="panel panel-primary">
+            <div class="panel-heading">Storing Office 365</div>
+            <div class="panel-body">
+                Helaas is zijn er de afgelopen dagen al enkelen problemen met office 365,
+                wij zullen de aankomend dagen proberen om de server om te zetten naar office 2016
+            </div>
+            <div class="panel-footer">
+                van 17 januari 2017 14.31<br />
+                Tot heden - Geen einddatum bekend
+            </div>
+        </div>
     </div>
 </div>
