--- a/UC alert tool/Views/Home/Contact.cshtml
+++ b/UC alert tool/Views/Home/Contact.cshtml
@@ -1,4 +1,8 @@
-﻿<h2>Contact </h2>
+﻿@{
+    ViewBag.Title = "Contact";
+}
+
+h2>@ViewBag.Title</h2>
 <h3>Contact opnemen met UC Systems</h3>
 
 <address>
