Fresh start of all the code & added jquery globalize for more date/time formats

--- a/UC alert tool/Views/Home/Contact.cshtml
+++ b/UC alert tool/Views/Home/Contact.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Contact";
 }
 
-h2>@ViewBag.Title</h2>
+<h2>@ViewBag.Title</h2>
 <h3>Contact opnemen met UC Systems</h3>
 
 <address>
