--- a/UC alert tool/Views/Storingen/Details.cshtml
+++ b/UC alert tool/Views/Storingen/Details.cshtml
@@ -11,6 +11,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.productID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.productID)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Titel)
         </dt>
 
