--- a/UC alert tool/Views/Storingen/Index.cshtml
+++ b/UC alert tool/Views/Storingen/Index.cshtml
@@ -12,6 +12,9 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.productID)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Titel)
         </th>
         <th>
@@ -31,6 +34,9 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.productID)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Titel)
         </td>
