--- a/UC alert tool/Views/Storingen/Delete.cshtml
+++ b/UC alert tool/Views/Storingen/Delete.cshtml
@@ -28,6 +28,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.inhoud)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.inhoud)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.eigenaarID)
         </dt>
 
