--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Storingen","Index","Storingen")</li>
+                    <li>@Html.ActionLink("Producten","Index","Producten")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
