--- a/UC alert tool/Views/Storingen/Index.cshtml
+++ b/UC alert tool/Views/Storingen/Index.cshtml
@@ -18,6 +18,9 @@
             @Html.DisplayNameFor(model => model.Titel)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.inhoud)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.eigenaarID)
         </th>
         <th>
@@ -39,6 +42,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Titel)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.inhoud)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.eigenaarID)
