--- a/UC alert tool/Views/Home/Index.cshtml
+++ b/UC alert tool/Views/Home/Index.cshtml
@@ -14,7 +14,16 @@
         {
             <div class="col-md-4">
                 <div class="panel panel-primary">
-                    <div class="panel-heading">@Html.DisplayFor(modelItem => item.Titel)</div>
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            @Html.DisplayFor(modelItem => item.Titel)
+                            @if (ViewContext.HttpContext.User.Identity.IsAuthenticated)
+                            {
+                                <a href="~/storingen/edit/@(item.ID)" class="glyphicon glyphicon-cog pull-right"></a> 
+                            }
+                        </h3>
+                                    
+                    </div>  
                     <div class="panel-body">@Html.DisplayFor(modelItem => item.inhoud)</div>
                     <div class="panel-footer">
                         van @Html.DisplayFor(modelItem => item.begindatum)<br />
