added Klant model for customers and make  a template for the rapporteren index page.

--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         <li>@Html.ActionLink("Storingen", "Index", "Storingen")</li>
                         <li>@Html.ActionLink("Producten", "Index", "Producten")</li>
+                        <li>@Html.ActionLink("Nieuwe storing melden", "Index", "Rapporteren")</li>
                     </ul>
                 }
 
