--- a/UC alert tool/Views/Rapporteren/Index.cshtml
+++ b/UC alert tool/Views/Rapporteren/Index.cshtml
@@ -4,4 +4,37 @@
 }
 
 <h2>@ViewBag.Title</h2>
+<div class="row">
+    <div class="col-md-6">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+            </div>
+            <div class="panel-footer text-center"> 
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+            </div>
+            <div class="panel-footer"></div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+            </div>
+            <div class="panel-footer"></div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+            </div>
+            <div class="panel-footer"></div>
+        </div>
+    </div>
+</div>
+
+
 
