--- a/UC alert tool/Views/Storingen/Details.cshtml
+++ b/UC alert tool/Views/Storingen/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model UC_alert_tool.Models.Storing
+﻿@model UC_alert_tool.Models.Storingen
 
 @{
     ViewBag.Title = "Details";
@@ -7,17 +7,9 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Storing</h4>
+    <h4>Storingen</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.productID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.productID)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Titel)
         </dt>
@@ -27,48 +19,56 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.inhoud)
+            @Html.DisplayNameFor(model => model.Inhoud)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.inhoud)
+            @Html.DisplayFor(model => model.Inhoud)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.eigenaarID)
+            @Html.DisplayNameFor(model => model.EigenaarID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.eigenaarID)
+            @Html.DisplayFor(model => model.EigenaarID)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.begindatum)
+            @Html.DisplayNameFor(model => model.Begindatum)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.begindatum)
+            @Html.DisplayFor(model => model.Begindatum)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.einddatum)
+            @Html.DisplayNameFor(model => model.Einddatum)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.einddatum)
+            @Html.DisplayFor(model => model.Einddatum)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.isGesloten)
+            @Html.DisplayNameFor(model => model.IsGesloten)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.isGesloten)
+            @Html.DisplayFor(model => model.IsGesloten)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Producten.Naam)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Producten.Naam)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
