--- a/UC alert tool/Views/Klanten/Delete.cshtml
+++ b/UC alert tool/Views/Klanten/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model UC_alert_tool.Models.Producten
+﻿@model UC_alert_tool.Models.Klanten
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Producten</h4>
+    <h4>Klanten</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -20,11 +20,27 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.HelpdeskID)
+            @Html.DisplayNameFor(model => model.PrimaireEmail)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.HelpdeskID)
+            @Html.DisplayFor(model => model.PrimaireEmail)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SecundaireEmail)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SecundaireEmail)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Telefoonnummer)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Telefoonnummer)
         </dd>
 
     </dl>
