--- a/UC alert tool/Views/Producten/Edit.cshtml
+++ b/UC alert tool/Views/Producten/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model UC_alert_tool.Models.Product
+﻿@model UC_alert_tool.Models.Producten
 
 @{
     ViewBag.Title = "Edit";
@@ -12,24 +12,24 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Product</h4>
+        <h4>Producten</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ID)
+        @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.naam, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Naam, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.naam, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.naam, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Naam, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Naam, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.helpdeskID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.HelpdeskID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.helpdeskID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.helpdeskID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.HelpdeskID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.HelpdeskID, "", new { @class = "text-danger" })
             </div>
         </div>
 
