added font awesome for nice icons and... added rapporteren controller for backend support of the rapporteren views. changed the emailviewcontoller - removed the 2 other models and added a list of Recipients to the email model styled the rapporteren index screen( icons can be changed at a later date) Made all the rapporteren views Started making the default form for reporting a "storing"

--- a/UC alert tool/Views/Rapporteren/Index.cshtml
+++ b/UC alert tool/Views/Rapporteren/Index.cshtml
@@ -5,35 +5,84 @@
 
 <h2>@ViewBag.Title</h2>
 <div class="row">
-    <div class="col-md-6">
-        <div class="panel panel-success">
-            <div class="panel-heading">
-            </div>
-            <div class="panel-footer text-center"> 
+    <a href="~/rapporteren/melding">
+        <div class="col-md-6">
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <i class="fa fa-newspaper-o fa-5x"></i>
+                        </div>
+                        <div class="col-md-6 pull-right">
+                            <h4>melding zonder sms of email notificatie</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer">
+                    Nieuwe melding maken
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-md-6">
-        <div class="panel panel-success">
-            <div class="panel-heading">
+    </a>  
+    <a href="~/rapporteren/meldingmetsms">
+        <div class="col-md-6">
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <i class="fa fa-commenting-o fa-5x"></i>
+                        </div>
+                        <div class="col-md-4 pull-right">
+                            <h4>melding met sms notificatie</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer">
+                    Nieuwe melding maken
+                </div>
             </div>
-            <div class="panel-footer"></div>
         </div>
-    </div>
-    <div class="col-md-6">
-        <div class="panel panel-success">
-            <div class="panel-heading">
+    </a>    
+</div>
+<div class="row">
+    <a href="~/rapporteren/meldingmetemail">
+        <div class="col-md-6">
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <i class="fa fa-envelope-o fa-5x"></i>
+                        </div>
+                        <div class="col-md-4 pull-right">
+                            <h4>melding met email notificatie</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer">
+                    Nieuwe melding maken
+                </div>
             </div>
-            <div class="panel-footer"></div>
         </div>
-    </div>
-    <div class="col-md-6">
-        <div class="panel panel-success">
-            <div class="panel-heading">
+    </a>
+    <a href="~/rapporteren/meldingmetemailensms">
+        <div class="col-md-6">
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <i class="fa fa-share-square-o fa-5x"></i>
+                        </div>
+                        <div class="col-md-4 pull-right">
+                            <h4>melding met sms en email notificatie</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer">
+                    Nieuwe melding maken
+                </div>
             </div>
-            <div class="panel-footer"></div>
         </div>
-    </div>
+    </a>  
 </div>
 
 
