Added meta content for storingen and producten models The metadata is for keeping attributes for the models after a database update

--- a/UC alert tool/Views/Rapporteren/Index.cshtml
+++ b/UC alert tool/Views/Rapporteren/Index.cshtml
@@ -13,8 +13,8 @@
                         <div class="col-md-2">
                             <i class="fa fa-newspaper-o fa-5x"></i>
                         </div>
-                        <div class="col-md-6 pull-right">
-                            <h4>melding zonder sms of email notificatie</h4>
+                        <div class="col-md-4 pull-right">
+                            <h4 class="pull-right">melding zonder sms of email notificatie</h4>
                         </div>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                             <i class="fa fa-commenting-o fa-5x"></i>
                         </div>
                         <div class="col-md-4 pull-right">
-                            <h4>melding met sms notificatie</h4>
+                            <h4 class="pull-right">melding met sms notificatie</h4>
                         </div>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
                             <i class="fa fa-envelope-o fa-5x"></i>
                         </div>
                         <div class="col-md-4 pull-right">
-                            <h4>melding met email notificatie</h4>
+                            <h4 class="pull-right">melding met email notificatie</h4>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                             <i class="fa fa-share-square-o fa-5x"></i>
                         </div>
                         <div class="col-md-4 pull-right">
-                            <h4>melding met sms en email notificatie</h4>
+                            <h4 class="pull-right">melding met sms en email notificatie</h4>
                         </div>
                     </div>
                 </div>
