--- a/UC alert tool/Views/Rapporteren/Melding.cshtml
+++ b/UC alert tool/Views/Rapporteren/Melding.cshtml
@@ -1,57 +1,72 @@
-﻿
+﻿@using UC_alert_tool.Models
+@model Storingen
 @{
     ViewBag.Title = "Nieuwe melding";
 }
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    <div class="form-horizontal">
+        <h4>Storing melden</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Titel, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Titel, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Titel, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-<h2>Nieuwe melding maken</h2>
-<div class="panel panel-default">
-    <div class="panel-heading">Melding</div>
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-md-6">
-                <form role="form">
-                    <div class="form-group">
-                        <label>Titel</label>
-                        <input class="form-control" placeholder="Titel van melding" />
-                    </div>
-                    <div class="form-group">
-                        <label>Product</label>
-                        <select class="form-control">
-                            <option value="1">Office 365</option>
-                            <option value="2">Haal opties uit database...</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label>Inhoud</label>
-                        <input class="form-control" placeholder="Informatie storing" />
-                    </div>
-                    <div class="form-group">
-                        <label>Begin datum</label>
-                        <input type="text" class="form-control" value=@DateTime.Now.Date.ToString()>
-                    </div>
-                    <div class="form-group">
-                        <label>Begin tijd</label>
-                        <input type="text" class="form-control" value=@DateTime.Now.ToString("HH:mm")>
-                    </div>
-                    <div class="form-group">
-                        <label>
-                            <input id="isGeslotenCheckbox" type="checkbox" value="" /> storing is afgelopen
-                        </label>
-                    </div>
-                    <div class="form-group">
-                        <label>Eind datum</label>
-                        <input disabled id="einddatum"  type="text" class="form-control" value=@DateTime.Now.Date.ToString()>
-                    </div>
-                    <div class="form-group">
-                        <label>Eind tijd</label>
-                        <input disabled id="eindtijd"  type="text" class="form-control" value=@DateTime.Now.ToString("HH:mm")>
-                    </div>
-                </form>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Inhoud, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(model => model.Inhoud, new { htmlAttributes = new {@class = "form-control", width= "280" } })
+                @Html.ValidationMessageFor(model => model.Inhoud, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ProductID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("ProductID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ProductID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Begindatum, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Begindatum, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Begindatum, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.IsGesloten, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.IsGesloten)
+                    @Html.ValidationMessageFor(model => model.IsGesloten, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Einddatum, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Einddatum, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Einddatum, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
-</div>
-
+}
 @section Scripts {
     @Scripts.Render("~/Scripts/projectScripts/generalscript.js")
 }
