added a form for testing the email server changed color of the news items to the company color

--- a/UC alert tool/Content/Site.css
+++ b/UC alert tool/Content/Site.css
@@ -29,3 +29,10 @@ textarea{
 #homepageTop{
     max-width:700px;
 }
+.panel-primary {
+    border-color: #e13a3d;
+}
+.panel-primary > .panel-heading{
+   background-color:#e13a3d;
+   border-color: #e13a3d;
+}
