--- a/UC alert tool/Views/Testers/SMSTester.cshtml
+++ b/UC alert tool/Views/Testers/SMSTester.cshtml
@@ -1,7 +1,38 @@
-﻿
+﻿@model UC_alert_tool.Models.SMS
 @{
     ViewBag.Title = "SMS tester";
 }
 
 <h2>SMS tester voor administrators</h2>
-
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    <form role="form">
+        <div class="form-group">
+            <label class="control-label" >Server IP</label>
+            @Html.EditorFor(model => model.server, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.server, "", new { @class = "text-danger" })        
+        </div>
+        <div class="form-group">
+            <label class="control-label" >username</label>
+            @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
+        </div>
+        <div class="form-group">
+            <label class="control-label" >password</label>
+            @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+        </div>
+        <div class="form-group">
+            <label class="control-label" >recipients</label>
+            @Html.TextAreaFor(model => model.Recipients, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Recipients, "", new { @class = "text-danger" })        
+        </div>
+        <div class="form-group">
+            <label class="control-label" >Text</label>
+            @Html.EditorFor(model => model.text, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.text, "", new { @class = "text-danger" })
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+}
