--- a/UC alert tool/Views/Testers/EmailTester.cshtml
+++ b/UC alert tool/Views/Testers/EmailTester.cshtml
@@ -10,16 +10,23 @@
 
     <div class="form-horizontal">
         <div class="form-group">
+            <label class="col-sm-2 control-label">SMTP server</label>
+            <div class="col-sm-10">
+                @Html.EditorFor(model => model.SMTPServerURL, new { htmlAttributes = new { @class = "form-control", placeholder = "smtp.example.com:587" } })
+                @Html.ValidationMessageFor(model => model.FromEmailAddress, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             <label class="col-sm-2 control-label">Van emailadres</label>
             <div class="col-sm-10">
-                @Html.EditorFor(model => model.FromEmailAddress, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.FromEmailAddress, new { htmlAttributes = new { @class = "form-control", placeholder="...@ucsystems.nl" } })
                 @Html.ValidationMessageFor(model => model.FromEmailAddress, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Naar</label>
             <div class="col-sm-10">
-                @Html.TextBoxFor(model => model.Recipients, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.Recipients, new { @class = "form-control", placeholder="test@gmail.com,test@hotmail.com" } )
                 @Html.ValidationMessageFor(model => model.Recipients, "", new { @class = "text-danger" })
             </div>
         </div>
