--- a/UC alert tool/Views/Storingen/Details.cshtml
+++ b/UC alert tool/Views/Storingen/Details.cshtml
@@ -59,6 +59,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Begintijd)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Begintijd)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Eindtijd)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Eindtijd)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Producten.Naam)
         </dt>
 
