The melding form is now working and will add a storing to the database also fixed the inhoud field so it is bigger than normal and is the same width as the editorfor field

--- a/UC alert tool/Content/Site.css
+++ b/UC alert tool/Content/Site.css
@@ -22,6 +22,9 @@ select,
 textarea{
     max-width: 280px;
 }
+.TextAreaFor100Percent{
+    width:100%;
+}
 #homepageTopWrapper{
     background-color:white;
     border-bottom: 1px solid black;
