--- a/UC alert tool/Views/Rapporteren/Melding.cshtml
+++ b/UC alert tool/Views/Rapporteren/Melding.cshtml
@@ -19,9 +19,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Inhoud, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Inhoud, htmlAttributes: new { @class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Inhoud, new { htmlAttributes = new {@class = "form-control", width= "280" } })
+                    @Html.TextAreaFor(model => model.Inhoud,8,50,new { htmlAttributes = new {@class = "form-control"} })
                 @Html.ValidationMessageFor(model => model.Inhoud, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -41,14 +41,11 @@
                 @Html.ValidationMessageFor(model => model.Begindatum, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
-            @Html.LabelFor(model => model.IsGesloten, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Begintijd, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.IsGesloten)
-                    @Html.ValidationMessageFor(model => model.IsGesloten, "", new { @class = "text-danger" })
-                </div>
+                @Html.EditorFor(model => model.Begintijd, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Begintijd, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -59,6 +56,23 @@
                     @Html.ValidationMessageFor(model => model.Einddatum, "", new { @class = "text-danger" })
                 </div>
             </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Eindtijd, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Eindtijd, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Eindtijd, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.IsGesloten, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.IsGesloten)
+                    @Html.ValidationMessageFor(model => model.IsGesloten, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
