--- a/UC alert tool/Views/Testers/SMSTester.cshtml
+++ b/UC alert tool/Views/Testers/SMSTester.cshtml
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group">
             <label class="control-label" >password</label>
-            @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.PasswordFor(model => model.password, new{ @class = "form-control" } )
             @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
